# stm32g474

./: README.md
stm32g474_min/: Cargo.toml  README.md  build.rs
stm32g474_min/.cargo/: config.toml
stm32g474_min/src/: main.rs
